--- a/mops.toml
+++ b/mops.toml
@@ -1,2 +1,4 @@
 [dependencies]
-base = "0.8.4"
+base = "0.7.3"
+mrr = "https://github.com/research-ag/motoko-lib#main"
+encoding = "https://github.com/aviate-labs/encoding.mo#main"
