--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run generate",
     "start": "webpack serve --mode development --env development",
     "prestart": "npm run generate",
-    "generate": "dfx generate safenote_backend"
+    "generate": "dfx generate safenote_backend_1 && dfx generate safenote_backend_2 && dfx generate safenote_backend_3"
   },
   "devDependencies": {
     "@dfinity/agent": "0.15.4",
