--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safenote_frontend",
   "version": "0.1.0",
-  "description": "SafeNote. A tool for secure notes exchanging.",
+  "description": "Safenote. A tool for secure notes exchanging.",
   "keywords": [
     "Internet Computer",
     "Motoko",
@@ -16,6 +16,7 @@
     "generate": "dfx generate safenote_backend_1 && dfx generate safenote_backend_2 && dfx generate safenote_backend_3"
   },
   "dependencies": {
+    "feather-icons": "^4.29.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.1"
@@ -26,6 +27,7 @@
     "@dfinity/agent": "0.15.4",
     "@dfinity/candid": "0.15.4",
     "@dfinity/principal": "0.15.4",
+    "@types/feather-icons": "^4.29.1",
     "assert": "2.0.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
