--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "generate": "dfx generate safenote_backend_1 && dfx generate safenote_backend_2 && dfx generate safenote_backend_3"
   },
   "dependencies": {
-    "aes-js": "^3.1.2",
+    "crypto-js": "^4.1.1",
     "feather-icons": "^4.29.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
