--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
+        "baseUrl": ".", // This must be specified if "paths" is.
+        "paths": { // This mapping is relative to "baseUrl"
+            "@/*": [
+                "./src/safenote_frontend/src/*" // Change to "./src/your_frontend_path/src/*"
+            ]
+        }
     },
     "include": [
         "src/safenote_frontend/src/**/*.ts",
