--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "crypto-random-string": "^5.0.0",
     "feather-icons": "^4.29.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
