--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "feather-icons": "^4.29.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vue-toast-notification": "^3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
